# vwrapper

./: .env.example  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
src/vwrapper/: cli.py  config.py  output.py  repl.py
src/vwrapper/agent/: intent.py  prompts.py
src/vwrapper/guardrails/: rules.py
src/vwrapper/models/: actions.py
src/vwrapper/providers/: fake.py  vmware.py
tests/: test_config.py  test_guardrails.py  test_intent.py  test_models.py  test_output.py
